force-app/main/default/objects/Rechtsnorm__mdt/Rechtsnorm__mdt.object-meta.xml
<CustomObject>
    <label>Rechtsnorm</label>
    <pluralLabel>Rechtsnormen</pluralLabel>
</CustomObject>