force-app/main/default/objects/Rechtsnorm__mdt/fields/Abgeloest_durch__c.field-meta.xml
<CustomField>
    <fullName>Abgeloest_durch__c</fullName>
    <description>DeveloperName of the provision that replaced this one, when there is one. Deliberately a key and not a lookup: custom metadata relationships add deploy-order coupling for something a single getInstance call resolves.</description>
    <label>Abgelöst durch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>