force-app/main/default/objects/Rechtsnorm__mdt/fields/Gesetz__c.field-meta.xml
<CustomField>
    <fullName>Gesetz__c</fullName>
    <description>Short name of the instrument - MessEG, MessEV, EnWG, NAV, LSV, 38. BImSchV. Kept separate from Norm__c so the corpus can be filtered by regime without parsing the citation string.</description>
    <label>Gesetz</label>
    <length>80</length>
    <type>Text</type>
</CustomField>