force-app/main/default/objects/Rechtsnorm__mdt/fields/Gueltig_bis__c.field-meta.xml
<CustomField>
    <fullName>Gueltig_bis__c</fullName>
    <description>Last day the provision applied; blank means still in force. Repealed norms stay in the corpus rather than being deleted - the Ladesaeulenverordnung fell on 1 January 2026 and people still cite it, so the engine has to be able to say that a citation WAS right and no longer is.</description>
    <label>Gültig bis</label>
    <type>Date</type>
</CustomField>