force-app/main/default/objects/Rechtsnorm__mdt/fields/Norm__c.field-meta.xml
<CustomField>
    <fullName>Norm__c</fullName>
    <description>The citation as a practitioner writes it, e.g. § 34 Abs. 1 Satz 3 MessEV. This exact string is what an action hands back as its rechtsgrundlage, and the transcript gate then requires every § the agent utters to appear in one that ran. So the citation is a key, not prose.</description>
    <label>Norm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>