force-app/main/default/objects/Rechtsnorm__mdt/fields/Parameter_Einheit__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Einheit__c</fullName>
    <description>Unit of Parameter_Wert__c - Jahre, Wochen, Tage, kW, kVA. Separate from the value so nothing has to parse a number out of a string.</description>
    <label>Parameter (Einheit)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>