force-app/main/default/objects/Rechtsnorm__mdt/fields/Parameter_Wert__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Wert__c</fullName>
    <description>The operative number the provision fixes, when it fixes one - eight years, ten weeks, 12 kVA, 4.2 kW. Holding it here rather than as an Apex constant is the point: the number and the sentence that sets it travel together, so an engine that uses the number can cite the sentence.</description>
    <label>Parameter (Wert)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>