force-app/main/default/objects/Rechtsnorm__mdt/fields/Quelle_URL__c.field-meta.xml
<CustomField>
    <fullName>Quelle_URL__c</fullName>
    <description>Link to the official text, so a reviewer can check the Wortlaut against the source in one click.</description>
    <label>Quelle</label>
    <type>Url</type>
</CustomField>