force-app/main/default/objects/Rechtsnorm__mdt/fields/Wortlaut__c.field-meta.xml
<CustomField>
    <fullName>Wortlaut__c</fullName>
    <description>The provision in its own words, verbatim from the official text. This field holds a quotation or it holds nothing - a paraphrase here would defeat the entire point, because it is what the agent is allowed to narrate from. Where only a clause was captured, the clause is what is stored.</description>
    <label>Wortlaut</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>